# gems

./: CMakeLists.txt  LICENSE.txt  README.md  hexprint.h
src/hexprint/: hexprint.c
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/logger/tests/: logger_test.cpp
